@@ -4,10 +4,11 @@
  * Useful definitions and declarations for tests.
  */
 
-#include <pthread.h>
-
 #ifndef _PTHREAD_TEST_H_
 #define _PTHREAD_TEST_H_
+
+#include <pthread.h>
+#include <stdio.h>
 
 char * error_string[] = {
   "ZERO",
@@ -54,5 +55,28 @@ char * error_string[] = {
   "ENOTEMPTY",
   "EILSEQ",
 };
+
+/*
+ * The Mingw32 assert macro calls the CRTDLL _assert function
+ * which pops up a dialog. We want to run in batch mode so
+ * we define our own assert macro.
+ */
+#ifdef NDEBUG
+
+#define assert(e) ((void)0)
+
+#else /* NDEBUG */
+
+#ifdef assert
+# undef assert
+#endif
+
+#define assert(e) \
+  ((e) ? (void) 0 : \
+   (fprintf(stderr, "Assertion failed: (%s), file %s, line %d\n", \
+            #e, __FILE__, (int) __LINE__), exit(1)))
+
+#endif /* NDEBUG */
+
 
 #endif
